# tkdnn_ros

./: README.md
tkdnn_ros/: CMakeLists.txt  package.xml
tkdnn_ros/config/: tkdnn.yaml
tkdnn_ros/launch/: tkdnn_ros.launch
tkdnn_ros/src/: TkdnnObjectDetector.cpp  tkdnn_object_detector_node.cpp
tkdnn_ros/yolo_network_config/cfg/: 2nd_v4.cfg
